✨🚧 Add products to a shopping list array when clicked

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,10 @@
 }
 
 /* added by me */
-.shoppinglist-wrapper {
+.wrapper {
   display: flex;
 }
-.column {
+.wrapper ul {
   flex-basis: 100%;
 }
 
